--- a/app/views/07/level.html
+++ b/app/views/07/level.html
@@ -6,7 +6,7 @@
 
 
 {% block service %}
-<form action="age" method="post" novalidate>
+<form action="levels" method="post" novalidate>
   <div class="govuk-form-group">
     <h1 class="govuk-heading-l">
       What qualification level are you looking for?
@@ -32,7 +32,7 @@
       items: [
         {
           value: "none",
-          text: "Learn skills and experience without gaining a qualification"
+          text: "Get skills and experience (without a qualification)"
         },
         {
           value: "level-1-2",
