--- a/app/views/07/age-2.html
+++ b/app/views/07/age-2.html
@@ -14,11 +14,7 @@
           About you
         </h1>
     
-        <p>This is optional but telling us means you will see more relevant results.  </p>
-
-        <p>Not all education and training courses are available to everyone.  </p>
-          
-        <p>This is often linked to age. As well as what qualifications you already have or your employment status.  </p>
+        <p>This is optional but telling us will mean we can show you more relevant results. Some types of training are only available for specific age groups.</p>
 
         <p><a href="https://www.skillsforcareers.education.gov.uk/your-training-options">Discover the different training options</a> </p>
 
@@ -31,37 +27,37 @@
             </legend>
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="age-16-17" name="age" type="radio" value="16-17">
-                <label class="govuk-label govuk-radios__label" for="age-16-17">
+                <input class="govuk-radios__input" id="age-under-18" name="age" type="radio" value="under-18">
+                <label class="govuk-label govuk-radios__label" for="age-under-18">
                   16 or 17
                 </label>
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="age-18" name="age" type="radio" value="18">
-                <label class="govuk-label govuk-radios__label" for="age-18">
+                <input class="govuk-radios__input" id="age-under-18" name="age" type="radio" value="under-18">
+                <label class="govuk-label govuk-radios__label" for="age-under-18">
                   18
                 </label>
               </div>
 
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="age-19" name="age" type="radio" value="19">
-                <label class="govuk-label govuk-radios__label" for="age-19">
+                <input class="govuk-radios__input" id="age-under-18" name="age" type="radio" value="under-18">
+                <label class="govuk-label govuk-radios__label" for="age-under-18">
                   19
                 </label>
               </div>
         
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="age-18-24" name="age" type="radio" value="20-24">
-                <label class="govuk-label govuk-radios__label" for="age-18-24">
+                <input class="govuk-radios__input" id="age-18-21" name="age" type="radio" value="18-24">
+                <label class="govuk-label govuk-radios__label" for="age-18-21">
                   20-24
                 </label>
               </div>
         
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="age-over-25" name="age" type="radio" value="over-25">
-                <label class="govuk-label govuk-radios__label" for="age-over-25">
-                  25 or older
+                <input class="govuk-radios__input" id="age-over-24" name="age" type="radio" value="over-24">
+                <label class="govuk-label govuk-radios__label" for="age-over-24">
+                  25 and over
                 </label>
               </div>
             </div>
