--- a/app/views/07/search-results-no-results.html
+++ b/app/views/07/search-results-no-results.html
@@ -22,9 +22,9 @@
 
 <p>If you searched for something really specific try using a more general description. For example instead of searching for ‘set designer’ try ‘creative and artistic jobs’.   </p>
 
-<p>Or you could increase the distance or <a href="">try a different location</a>. </p>
+<p>Or you could increase the distance or <a href="location">try a different location</a>. </p>
 
-<p>Or <a href="">browse all courses and training near to you</a>. </p>
+<p>Or <a href="courses-2">browse all courses and training near to you</a>. </p>
 
   </div>
 </div>
