--- a/app/views/07/check-answers.html
+++ b/app/views/07/check-answers.html
@@ -69,7 +69,7 @@
     </dt>
     <dd class="govuk-summary-list__value">
       {% if data['levels'] == 'none' %}
-      Learn skills and experience without a qualification
+      Get skills and experience (without a qualification)
     {% elseif data['levels'] == 'level-1-2' %}
     Level 1 or 2 (like GCSEs)
     {% elseif data['levels'] == 'level-3' %}
