--- a/app/views/07/level.html
+++ b/app/views/07/level.html
@@ -18,8 +18,8 @@
 
 
     {{ govukCheckboxes({
-      idPrefix: "levels",
-      name: "levels",
+      idPrefix: "qualification-level",
+      name: "qualification-level",
       fieldset: {
         legend: {
           text: "Qualification level",
