--- a/app/views/07/courses.html
+++ b/app/views/07/courses.html
@@ -66,6 +66,23 @@ Show filters
                name="option-select-filter-location"
                value="{{ selectedLocation }}">
       </div>
+
+      {{ govukSelect({
+        id: "travel-location",
+        name: "travel-location",
+        label: {
+          text: "Travel distance"
+        },
+        items: [
+          { value: "", text: "Select a distance" },
+          { value: "1 mile", text: "Up to 1 mile", selected: travelDistance == "1 mile" },
+          { value: "2 miles", text: "Up to 2 miles", selected: travelDistance == "2 miles" },
+          { value: "5 miles", text: "Up to 5 miles", selected: travelDistance == "5 miles" },
+          { value: "10 miles", text: "Up to 10 miles", selected: travelDistance == "10 miles" },
+          { value: "15 miles", text: "Up to 15 miles", selected: travelDistance == "15 miles" },
+          { value: "25 miles", text: "Up to 25 miles", selected: travelDistance == "25 miles" }
+        ]
+      }) }}
 <!--
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
