--- a/app/views/07/location.html
+++ b/app/views/07/location.html
@@ -35,37 +35,37 @@
       </legend>
       <div class="govuk-radios" data-module="govuk-radios">
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="travel-location" name="travel-location" type="radio" value="Up to 1 miles">
+          <input class="govuk-radios__input" id="travel-location" name="travel-location" type="radio" value="1 mile">
           <label class="govuk-label govuk-radios__label" for="travel-location">
             Up to 1 mile
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="travel-location-2" name="travel-location" type="radio" value="Up to 2 miles">
+          <input class="govuk-radios__input" id="travel-location-2" name="travel-location" type="radio" value="2 miles">
           <label class="govuk-label govuk-radios__label" for="travel-location-2">
             Up to 2 miles
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="travel-location-3" name="travel-location" type="radio" value="Up to 5 miles">
+          <input class="govuk-radios__input" id="travel-location-3" name="travel-location" type="radio" value="5 miles">
           <label class="govuk-label govuk-radios__label" for="travel-locatio-3">
             Up to 5 miles
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="travel-location-4" name="travel-location" type="radio" value="Up to 10 miles">
+          <input class="govuk-radios__input" id="travel-location-4" name="travel-location" type="radio" value="10 miles">
           <label class="govuk-label govuk-radios__label" for="travel-location-4">
             Up to 10 miles
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="travel-location-5" name="travel-location" type="radio" value="Up to 15 miles">
+          <input class="govuk-radios__input" id="travel-location-5" name="travel-location" type="radio" value="15 miles">
           <label class="govuk-label govuk-radios__label" for="travel-location-5">
             Up to 15 miles
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="travel-location-6" name="travel-location" type="radio" value="Up to 25 miles">
+          <input class="govuk-radios__input" id="travel-location-6" name="travel-location" type="radio" value="25 miles">
           <label class="govuk-label govuk-radios__label" for="travel-location-6">
             Up to 25 miles
           </label>
