--- a/app/views/07/courses.html
+++ b/app/views/07/courses.html
@@ -170,7 +170,7 @@ Show filters
 <!-- Course hours -->
 <fieldset class="govuk-fieldset">
   <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-    Course hours
+    Course study time
   </legend>
 
   <div class="govuk-checkboxes govuk-checkboxes--small">
