--- a/app/views/07/check-answers.html
+++ b/app/views/07/check-answers.html
@@ -34,9 +34,7 @@
       Distance
     </dt>
     <dd class="govuk-summary-list__value">
-      {% if data['travel-location'] == '1 mile' %}
-      Up to 1 mile
-    {% elseif data['travel-location'] == '2 miles' %}
+    {% if data['travel-location'] == '2 miles' %}
     Up to 2 miles
     {% elseif data['travel-location'] == '5 miles' %}
     Up to 5 miles
