--- a/app/views/07/location.html
+++ b/app/views/07/location.html
@@ -14,7 +14,7 @@
 
   <p>You can search anywhere in England.</p>
 
-   <p> However, some courses are only available to people living in the local area. This is more common for short courses or those aiming to help you find employment. And can apply even if it is online training. You should check with the provider if you are unsure if you are able to do their course.</p>
+   <p> However, some courses are only available to people living in the local area. This is more common for short courses or those aiming to help you find employment. And can apply even if it is online training. Check with the provider if you are unsure if you can apply. </p>
 
   {{ govukInput({
     label: {
@@ -35,12 +35,6 @@
       </legend>
       <div class="govuk-radios" data-module="govuk-radios">
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="travel-location" name="travel-location" type="radio" value="1 mile">
-          <label class="govuk-label govuk-radios__label" for="travel-location">
-            Up to 1 mile
-          </label>
-        </div>
-        <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="travel-location-2" name="travel-location" type="radio" value="2 miles">
           <label class="govuk-label govuk-radios__label" for="travel-location-2">
             Up to 2 miles
@@ -48,7 +42,7 @@
         </div>
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="travel-location-3" name="travel-location" type="radio" value="5 miles">
-          <label class="govuk-label govuk-radios__label" for="travel-locatio-3">
+          <label class="govuk-label govuk-radios__label" for="travel-locatin-3">
             Up to 5 miles
           </label>
         </div>
@@ -65,9 +59,15 @@
           </label>
         </div>
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="travel-location-6" name="travel-location" type="radio" value="25 miles">
+          <input class="govuk-radios__input" id="travel-location-6" name="travel-location" type="radio" value="30 miles">
           <label class="govuk-label govuk-radios__label" for="travel-location-6">
-            Up to 25 miles
+            Up to 30 miles
+          </label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="travel-location-7" name="travel-location" type="radio" value="Any location">
+          <label class="govuk-label govuk-radios__label" for="travel-location-7">
+            Any location
           </label>
         </div>
       </div>
