--- a/app/views/07/location.html
+++ b/app/views/07/location.html
@@ -14,7 +14,7 @@
 
   <p>You can search anywhere in England.</p>
 
-   <p> However, some courses are only available to people living in the local area. This is more common for short courses or those aiming to help you find employment. Check with the provider if you are unsure if you can apply. </p>
+   <p> However, some courses are only available to people living in the local area. This is more common for short courses or those aiming to help you find employment. And can apply even if it is online training. Check with the provider if you are unsure. </p>
 
   {{ govukInput({
     label: {
