Added missing data view

--- a/app/views/07/location.html
+++ b/app/views/07/location.html
@@ -14,7 +14,7 @@
 
   <p>You can search anywhere in England.</p>
 
-   <p> However, some courses are only available to people living in the local area. This is more common for short courses or those aiming to help you find employment. And can apply even if it is online training. Check with the provider if you are unsure. </p>
+  <p>However, some courses are only available to people living in the local area. This is more common for short courses or those aiming to help you find employment. And can apply even if it is online training. Check with the provider if you are unsure. </p>
 
   {{ govukInput({
     label: {
@@ -42,7 +42,7 @@
         </div>
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="travel-location-3" name="travel-location" type="radio" value="5 miles">
-          <label class="govuk-label govuk-radios__label" for="travel-locatin-3">
+          <label class="govuk-label govuk-radios__label" for="travel-location-3">
             Up to 5 miles
           </label>
         </div>
