--- a/app/views/07/courses.html
+++ b/app/views/07/courses.html
@@ -1,5 +1,5 @@
 {% extends "./layouts/_RESULTS.html" %}
-
+{% from "./macros/clear-filter-link.njk" import clearFilterLink %}
 <!--Find the person in the data-->
 
 {% set withoutDescription = "true" %}
@@ -53,7 +53,10 @@ Show filters
           {% endfor %}
         </div>
       </fieldset>
-
+      {% if selectedQualifications.length > 0 %}
+      {{ clearFilterLink("filter", query) }}
+    {% endif %}
+    
 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
       <div class="govuk-form-group">
@@ -82,6 +85,11 @@ Show filters
           { value: "30 miles", text: "Up to 30 miles", selected: travelDistance == "30 miles" }
         ]
       }) }}
+
+      {% if selectedLocation %}
+  {{ clearFilterLink("option-select-filter-location", query) }}
+{% endif %}
+
 <!--
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
@@ -128,6 +136,10 @@ Show filters
           {% endfor %}
         </div>
       </fieldset>
+      {% if selectedLevels.length > 0 %}
+  {{ clearFilterLink("qualification-level", query) }}
+{% endif %}
+
 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
       <!-- Learning method -->
 <fieldset class="govuk-fieldset">
@@ -146,6 +158,7 @@ Show filters
     {% endfor %}
   </div>
 </fieldset>
+
 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 <!-- Course hours -->
 <fieldset class="govuk-fieldset">
