Added autocomplete example to location

--- a/app/views/08/start-page.html
+++ b/app/views/08/start-page.html
@@ -25,6 +25,7 @@
 
         <ul class="govuk-list govuk-list--bullet">
             <li><a href="https://dfedigital.atlassian.net/browse/FAB-331">FAB-331</a> accessibility improvements - including 'clear filters' links for each filter group</li>
+            <li><a href="https://dfedigital.atlassian.net/browse/FAB-372">FAB-372</a> exception pages</li>
         </ul>
 
         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
